Don't pollute top level CMake options with the Java executables.
CMAKE_Java_ARCHIVE and CMAKE_Java_RUNTIME made "advanced".

--- a/ioProxy/CMakeLists.txt
+++ b/ioProxy/CMakeLists.txt
@@ -48,6 +48,8 @@
 set(CMAKE_USER_MAKE_RULES_OVERRIDE "JavaCompileOverride")
 
 enable_language(Java)
+mark_as_advanced(CMAKE_Java_ARCHIVE)
+mark_as_advanced(CMAKE_Java_RUNTIME)
 
 set(IOPROXY_SRCS
   HybridSwitch.java
