--- a/ReG_Steer_Config.h.in
+++ b/ReG_Steer_Config.h.in
@@ -65,7 +65,6 @@
 #cmakedefine REG_LOG_STEERING
 #cmakedefine REG_DEBUG
 #cmakedefine REG_DEBUG_FULL
-#cmakedefine REG_USE_TIMING
 
 #cmakedefine REG_NEED_MALLOC_H
 
@@ -76,6 +75,7 @@
 #cmakedefine01 REG_HAS_MSG_WAITALL
 #cmakedefine01 REG_VALIDATE_XML
 #cmakedefine01 REG_KEEP_XML_MESSAGES
+#cmakedefine01 REG_USE_TIMING
 
 /* standard system headers */
 
@@ -128,17 +128,6 @@
 #define usleep(microseconds) (Sleep(microseconds/1000))
 #define getcwd _getcwd
 #define read _read
-#endif
-
-/* ---------------------------------------------------- */
-
-/* Adjust some defines to match what is in the legacy code.
- *
- * These could be changed in source code at some point.
- */
-
-#ifdef REG_USE_TIMING
-#define USE_REG_TIMING
 #endif
 
 #define __REG_STEER_CONFIG_H__
