Start port to native Windows/MSVC - static, monolithic, files-based transports.
Files-based monolithic, static library compiles with Visual Studio 9.0 2008, via
CMake 2.8.

Minor changes to some file-based io calls were required.

Windows specific config has been moved out of ReG_Steer_Config.h into
ReG_Steer_Win32.h which is called, if necessary, from there instead.

A Windows.cmake platform file has been added for specific defines, etc.

The POSIX directory browsing functions are provided by dirent.[c|h].

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,8 +161,11 @@ endif(REG_BUILD_FORTRAN_WRAPPERS)
 # keep a track of them to help with configuring
 # other projects that link against this one
 #
-find_library(LIBM_LIB m)
-mark_as_advanced(LIBM_LIB)
+set(REG_EXTERNAL_LIBS "")
+if(UNIX)
+  find_library(LIBM_LIB m)
+  mark_as_advanced(LIBM_LIB)
+endif(UNIX)
 find_package(ZLIB REQUIRED)
 include_directories(${ZLIB_INCLUDE_DIR})
 set(REG_EXTERNAL_LIBS ${REG_EXTERNAL_LIBS} ${ZLIB_LIBRARY} ${LIBM_LIB})
