Port mini_app, sink and simple to native Windows.
External libraries and defines updated and Winsock2 is required for the XDR
library.

All examples included header files that were already included via
ReG_Steer_Config.h so those were removed.

Most simple warnings were also fixed.

--- a/ReG_Steer_Config.h.in
+++ b/ReG_Steer_Config.h.in
@@ -103,6 +103,7 @@
 #include <dirent.h>
 #else /* WIN32 */
 #include <windows.h>
+#include <winsock2.h>
 #include <direct.h>
 #include <io.h>
 #include "ReG_Steer_Win32.h"
