Add a C99 compatible snprintf function for Windows/MSVC.
This uses _vscprintf() and _vsnprintf_s(). The former is used to return the
number of characters that have/would have been printed and the latter is used
with the _TRUNCATE option to emulate the snprintf behaviour of always printing
the end of string null character.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,7 +60,7 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 
 # MSVC support files
 if(WIN32 AND NOT CYGWIN)
-  set(REG_LIB_SRCS ${REG_LIB_SRCS} win32/dirent.c)
+  set(REG_LIB_SRCS ${REG_LIB_SRCS} win32/dirent.c win32/snprintf.c)
 endif(WIN32 AND NOT CYGWIN)
 
 #
