Copy the image to the build tree for both HTML and LaTeX generation.
Was previously copying to the HTML build every time whether or not it was
needed and not copying to the LaTeX build at all.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -102,12 +102,22 @@ add_custom_target(Documentation ALL
   "${CMAKE_CURRENT_BINARY_DIR}/doxyfile"
 )
 
-# copy the required images to the build dir
-configure_file(
-  "${CMAKE_CURRENT_SOURCE_DIR}/steer_arch_symm.png"
-  "${CMAKE_CURRENT_BINARY_DIR}/html/steer_arch_symm.png"
-  COPYONLY
-)
+# copy the required images to the build dirs
+if(REG_BUILD_HTML_DOCS)
+  configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/steer_arch_symm.png"
+    "${CMAKE_CURRENT_BINARY_DIR}/html/steer_arch_symm.png"
+    COPYONLY
+  )
+endif(REG_BUILD_HTML_DOCS)
+
+if(REG_BUILD_LATEX_DOCS)
+  configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/steer_arch_symm.png"
+    "${CMAKE_CURRENT_BINARY_DIR}/latex/steer_arch_symm.png"
+    COPYONLY
+  )
+endif(REG_BUILD_LATEX_DOCS)
 
 # install the documentation
 if(REG_BUILD_HTML_DOCS)
