Add a setting to choose the paper size of the latex manual.
Can now choose a4, a4wide, letter, legal or executive.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -61,6 +61,9 @@ mark_as_advanced(REG_BUILD_LATEX_DOCS)
 if(REG_BUILD_LATEX_DOCS)
   set(REG_BUILD_LATEX_DOCS YES)
   find_package(LATEX REQUIRED)
+
+  set(DOXYGEN_PAPER_TYPE "a4wide" CACHE STRING "The type of paper to use for the user manual output. Can be a4, a4wide, letter, legal or executive. Default: a4wide.")
+  mark_as_advanced(DOXYGEN_PAPER_TYPE)
 else(REG_BUILD_LATEX_DOCS)
   set(REG_BUILD_LATEX_DOCS NO)
 endif(REG_BUILD_LATEX_DOCS)
