Remove all references to ReG_Steer_Config.h from header files.
This was never needed and actually gets in the way when building other things
against the library. Any headers that actually need it will have it included
before it in the code anyway.

--- a/ReG_Steer_Config.h.in
+++ b/ReG_Steer_Config.h.in
@@ -49,7 +49,7 @@
     @file ReG_Steer_Config.h
     @brief Configuration file for passing build time options to source code
 
-    All internal library source code and header files should include
+    All internal library source code files should include
     ReG_Steer_Config.h before any other code or includes.
     @author Robert Haines
 */
