Create a new, separate, config header for the examples.
This is so that the examples don't need to pull in ReG_Steer_Config.h which is
bad practice.

One configuration item, REG_HAS_GETPASS, is only ever used by the examples so is
moved out of ReG_Steer_Config.h and into the new file, ReG_Examples_Config.h.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -44,6 +44,13 @@
 #
 #  Author: Robert Haines
 
+# configure the header file
+configure_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/ReG_Examples_Config.h.in"
+  "${PROJECT_BINARY_DIR}/ReG_Examples_Config.h"
+  @ONLY
+)
+
 if(NOT REG_DYNAMIC_MOD_LOADING)
   if(REG_BUILD_MODULAR_LIBS)
     foreach(type ${REG_MODULES_TYPES})
