Update the handling of include files for projects built against this one.
Split the RealityGrid headers and the external headers into two separate lists
and no longer install the ReG_Steer_Config.h file (as it is really only a build
time requirement for steer_lib).

--- a/UseRealityGrid.cmake.in
+++ b/UseRealityGrid.cmake.in
@@ -54,6 +54,7 @@ if(NOT REG_USE_FILE_LOADED)
 
   # tell the compiler where the headers are
   include_directories(${RealityGrid_INCLUDE_DIRS})
+  include_directories(${RealityGrid_EXT_INCLUDE_DIRS})
 
   # tell the linker where the libs are
   link_directories(${RealityGrid_LIBRARY_DIRS})
