--- a/RealityGridConfig.cmake.in
+++ b/RealityGridConfig.cmake.in
@@ -55,6 +55,7 @@ set(RealityGrid_INSTALL_TYPE "@RealityGrid_INSTALL_TYPE_CONFIG@")
 # header, library and documentation locations
 set(RealityGrid_INSTALL_PREFIX @RealityGrid_INSTALL_PREFIX_CONFIG@)
 set(RealityGrid_INCLUDE_DIRS @RealityGrid_INCLUDE_DIRS_CONFIG@)
+set(RealityGrid_EXT_INCLUDE_DIRS @RealityGrid_EXT_INCLUDE_DIRS_CONFIG@)
 set(RealityGrid_LIBRARY_DIRS @RealityGrid_LIBRARY_DIRS_CONFIG@)
 set(RealityGrid_BIN_DIR @RealityGrid_BIN_DIR_CONFIG@)
 set(RealityGrid_DOCS_DIR @RealityGrid_DOCS_DIR_CONFIG@)
