Check for xmlReadMemory properly.
We were assuming that all versions of libxml2 would have this now but there are
a couple of older versions about on Windows so check properly.

--- a/ReG_Steer_Config.h.in
+++ b/ReG_Steer_Config.h.in
@@ -84,6 +84,7 @@
 #cmakedefine01 REG_HAS_GETPASS
 #cmakedefine01 REG_HAS_SIGUSR2
 #cmakedefine01 REG_HAS_SIGXCPU
+#cmakedefine01 REG_HAS_XMLREADMEMORY
 
 /* standard system headers */
 
